# dot

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
scripts/: release-check.sh
src/: archive.rs  archive.zig  cli.rs  env.zig  error.rs  http.rs  install.rs  main.rs  paths.rs  platform.rs  platform.zig  shell.rs  state.rs  template.rs  tool.rs  tool.zig  util.rs  util.zig  validate.rs  version.zig
src/cmd/: doctor.rs  doctor.zig  groups.rs  info.rs  install.rs  install.zig  list.rs  list.zig  mod.rs  outdated.rs  pin.rs  search.rs  uninstall.rs  unpin.rs  update.rs  update.zig  upgrade.rs
src/repository/: builtin-repository.json  loader.rs  mod.rs
src/ui/: mod.rs  output.rs  output.zig  progress.rs
tests/: cli.rs
